--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -31,19 +31,19 @@
     "@openapi-qraft/test-fixtures": "workspace:*",
     "@tanstack/query-core": "^5.66.3",
     "@tanstack/react-query": "^5.66.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/jscodeshift": "^0.11.11",
     "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.5",
     "eslint": "^9.20.1",
     "eslint-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "global-jsdom": "^26.0.0",
     "jscodeshift": "^17.0.0",
-    "jsdom": "^25.0.0",
-    "msw": "^2.6.8",
+    "jsdom": "^26.0.0",
+    "msw": "^2.7.0",
     "prettier": "^3.3.3",
     "query-string": "^8.2.0",
     "react": "^19.0.0",
@@ -51,7 +51,7 @@
     "rimraf": "^5.0.10",
     "rollup": "~4.22.4",
     "typescript": "^5.6.2",
-    "vitest": "^2.1.9"
+    "vitest": "^3.0.5"
   },
   "files": [
     "dist",
