--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
     "build": {
       "cache": true,
       "dependsOn": ["write-package-version-file", "codegen", "^build"],
-      "outputs": ["dist/**", "tsFactoryCodeGenerator.ts"]
+      "outputs": ["dist/**", "tsFactoryCodeGenerator.ts", "src/ts-factory/service-operation.generated/**"]
     },
     "test": {
       "cache": true,
