--- a/packages/react-client/tsconfig.json
+++ b/packages/react-client/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": ".",
     "lib": ["ES2019", "DOM", "DOM.Iterable"],
     "jsx": "react",
+    "verbatimModuleSyntax": true,
     "paths": {
       "@openapi-qraft/react": ["./src/index.ts"],
       "@openapi-qraft/react/callbacks/index": ["./src/callbacks/index.ts"],
