--- a/packages/tanstack-query-react-types/tsconfig.json
+++ b/packages/tanstack-query-react-types/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "dist",
     "baseUrl": ".",
     "lib": ["ES2019", "DOM", "DOM.Iterable"],
-    "jsx": "react"
+    "jsx": "react",
+    "verbatimModuleSyntax": true
   },
   "include": ["src/**/*"],
   "exclude": [
