chore: enabled provenance support in GitHub Actions for npm publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      id-token: write # Required to perform `npm publish --provenance`
     environment: production
     steps:
       - name: Checkout Repo
