chore: `yarn set version from sources --repository https://github.com/GauBen/berry.git --branch feat/provenance`

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,4 +2,4 @@ nodeLinker: node-modules
 
 npmPublishRegistry: "https://registry.npmjs.org/"
 
-yarnPath: .yarn/releases/yarn-4.2.1.cjs
+yarnPath: .yarn/releases/yarn-4.8.1-git.20250405.hash-2c0a3eb.cjs
