RELEASING: Releasing 6 package(s)
Releases:
  @openapi-qraft/tanstack-query-react-types@2.2.3-provenance-test.0
  @openapi-qraft/react@2.2.3-provenance-test.0
  @openapi-qraft/cli@2.2.3-provenance-test.0
  @openapi-qraft/plugin@2.2.3-provenance-test.0
  @openapi-qraft/tanstack-query-react-plugin@2.2.3-provenance-test.0
  @openapi-qraft/openapi-typescript-plugin@1.2.9-provenance-test.0

--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/openapi-typescript-plugin",
-  "version": "1.2.8",
+  "version": "1.2.9-provenance-test.0",
   "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
