chore: add "repository" to the package.json files

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -74,5 +74,10 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
+    "directory": "packages/cli"
   }
 }
