--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -33,5 +33,10 @@
       "import": "./dist/rollup.config.js"
     },
     "./package.json": "./package.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
+    "directory": "packages/cli"
   }
 }
