--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -34,12 +34,13 @@
     "yaml": "^2.5.1"
   },
   "devDependencies": {
+    "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^20.16.5",
     "@vitest/coverage-v8": "^3.0.5",
     "commander": "^11.1.0",
-    "eslint": "^9.20.1",
+    "eslint": "^9.24.0",
     "rimraf": "^5.0.10",
     "typescript": "^5.6.2",
     "vitest": "^3.0.5"
