--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -48,6 +48,7 @@
     "vitest": "^3.0.5"
   },
   "peerDependencies": {
+    "@redocly/openapi-core": "^1.16.0",
     "commander": "^11.1.0"
   },
   "peerDependenciesMeta": {
