--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -49,11 +49,13 @@
     "@vitest/coverage-v8": "^3.0.5",
     "commander": "^11.1.0",
     "eslint": "^9.24.0",
+    "memfs": "^4.11.1",
     "rimraf": "^5.0.10",
     "typescript": "^5.6.2",
     "vitest": "^3.0.5"
   },
   "peerDependencies": {
+    "@redocly/openapi-core": "^1.16.0",
     "commander": "^11.1.0"
   },
   "peerDependenciesMeta": {
