--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -49,7 +49,10 @@
     "vitest": "^3.0.5"
   },
   "peerDependencies": {
-    "commander": "^11.1.0"
+    "ansi-colors": "^4.1.3",
+    "camelcase": "^8.0.0",
+    "commander": "^11.1.0",
+    "ora": "^8.1.0"
   },
   "peerDependenciesMeta": {
     "commander": {
