refactor: exports from package.json files

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,9 +36,14 @@
     "!src/**/*.test.*",
     "!src/**/*.spec.*"
   ],
+  "module": "dist/bin.js",
+  "types": "dist/bin.d.ts",
   "exports": {
     "./package.json": "./package.json",
-    "./*": "./dist/*.js"
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js"
+    }
   },
   "typesVersions": {
     "*": {
