--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -60,6 +60,7 @@
     "!src/tests/**"
   ],
   "type": "module",
+  "module": "dist/esm/index.js",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
