--- a/packages/ts-factory-code-generator/package.json
+++ b/packages/ts-factory-code-generator/package.json
@@ -9,6 +9,8 @@
     "clean": "rimraf dist/",
     "lint": "eslint"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
