--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -12,10 +12,18 @@
     "clean": "rimraf dist/",
     "write-package-version-file": "yarn exec ../../write-package-version-file.sh"
   },
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
-    ".": "./dist/index.js",
-    "./*": "./dist/*.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js"
+    }
   },
   "typesVersions": {
     "*": {
