RELEASING: Releasing 10 package(s)
Releases:
  @openapi-qraft/tanstack-query-react-plugin@2.3.1-provenance-test.0
  @openapi-qraft/tanstack-query-react-types@2.3.1-provenance-test.0
  @openapi-qraft/openapi-typescript-plugin@1.2.11-provenance-test.0
  @openapi-qraft/ts-factory-code-generator@1.0.2-provenance-test.0
  @openapi-qraft/rollup-config@1.1.1-provenance-test.0
  @openapi-qraft/test-fixtures@1.0.1-provenance-test.0
  @openapi-qraft/plugin@2.3.1-provenance-test.0
  @openapi-qraft/cli@2.3.1-provenance-test.0
  @openapi-qraft/eslint-config@1.0.1-provenance-test.0
  @openapi-qraft/react@2.3.1-provenance-test.0

--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/rollup-config",
-  "version": "1.1.0",
+  "version": "1.1.1-provenance-test.0",
   "private": true,
   "scripts": {
     "build": "tsc",
