--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1-provenance-test.0",
   "packageManager": "yarn@4.0.2",
   "private": true,
   "type": "module",
