--- a/packages/react-client/tsconfig.json
+++ b/packages/react-client/tsconfig.json
@@ -17,6 +17,7 @@
   "exclude": [
     "**/node_modules",
     "**/.*/",
-    "src/tests/fixtures/migrate-to-v2-codemod/**/*"
+    "src/tests/fixtures/migrate-to-v2-codemod/**/*",
+    "src/tests/fixtures/migrate-to-v2.6.0-codemod/**/*"
   ]
 }
