fix: turbo deps tree

--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
+    "@openapi-qraft/tanstack-query-react-types": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
     "@openapi-qraft/ts-factory-code-generator": "workspace:*",
     "camelcase": "^8.0.0",
