feat: add Redocly config support

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -78,6 +78,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
-    "directory": "packages/cli"
+    "directory": "packages/plugin"
   }
 }
