--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,9 @@
     "typescript": "^5.6.2",
     "vitest": "^3.0.5"
   },
+  "peerDependencies": {
+    "ansi-colors": "^4.1.3"
+  },
   "files": [
     "dist",
     "src",
