chore: add color spinner colors

--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -49,6 +49,7 @@
   },
   "peerDependencies": {
     "@redocly/openapi-core": "^1.16.0",
+    "ansi-colors": "^4.1.3",
     "commander": "^11.1.0"
   },
   "peerDependenciesMeta": {
@@ -69,6 +70,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
-    "directory": "packages/cli"
+    "directory": "packages/openapi-typescript-plugin"
   }
 }
