--- a/e2e/projects/typescript-es2015-bundler/package.json
+++ b/e2e/projects/typescript-es2015-bundler/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "codegen": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
+    "codegen": "openapi-qraft --redocly my-redocly.yaml",
     "e2e:pre-build": "npm run codegen",
     "e2e:post-build": "echo 'No post-build action'"
   },
