--- a/website/package.json
+++ b/website/package.json
@@ -32,14 +32,14 @@
     "remark-cli": "12.0.1",
     "remark-heading-id": "^1.0.1",
     "remark-lint-match-punctuation": "0.2.1",
-    "remark-lint-no-duplicate-headings-in-section": "4.0.0",
-    "remark-lint-no-tabs": "4.0.0",
+    "remark-lint-no-duplicate-headings-in-section": "4.0.1",
+    "remark-lint-no-tabs": "4.0.1",
     "remark-lint-no-trailing-spaces": "3.0.2",
-    "remark-preset-lint-consistent": "6.0.0",
-    "remark-preset-lint-markdown-style-guide": "6.0.0",
-    "remark-preset-lint-recommended": "7.0.0",
-    "remark-retext": "6.0.0",
-    "remark-validate-links": "13.0.1",
+    "remark-preset-lint-consistent": "6.0.1",
+    "remark-preset-lint-markdown-style-guide": "6.0.1",
+    "remark-preset-lint-recommended": "7.0.1",
+    "remark-retext": "6.0.1",
+    "remark-validate-links": "13.1.0",
     "retext-diacritics": "5.0.0",
     "retext-english": "5.0.0",
     "retext-indefinite-article": "5.0.0",
@@ -63,5 +63,10 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
+    "directory": "website"
   }
 }
