chore: fix turbo.json

--- a/packages/react-client/turbo.json
+++ b/packages/react-client/turbo.json
@@ -4,10 +4,12 @@
   "tasks": {
     "typecheck": {
       "cache": true,
-      "dependsOn": [
-        "^build",
-        "build"
-      ]
+      "dependsOn": ["build"]
+    },
+    "test": {
+      "cache": true,
+      "dependsOn": ["build"],
+      "outputs": ["coverage/**"]
     }
   }
 }
