fix: support for `--enum-values` and `--dedupe-enums` options

--- a/packages/react-client/redocly.yaml
+++ b/packages/react-client/redocly.yaml
@@ -11,6 +11,7 @@ apis:
         openapi-typescript: true
       output-dir: src/tests/fixtures/api
       clean: true
+      enum-values: true
       explicit-import-extensions: true
       openapi-types-file-name: openapi.ts
       filter-services:
