--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -20,7 +20,7 @@
     "@openapi-qraft/openapi-typescript-plugin": "workspace:^",
     "@openapi-qraft/rollup-config": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
-    "@tanstack/react-query": "^5.17.3",
+    "@tanstack/react-query": "^5.80.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
@@ -39,9 +39,8 @@
     "vitest": "^1.4.0"
   },
   "peerDependencies": {
-    "@tanstack/query-core": "^5.0.0",
-    "@tanstack/react-query": "^5.0.0",
-    "react": "^18.0.0"
+    "@tanstack/query-core": "^5.80.0",
+    "@tanstack/react-query": "^5.80.0"
   },
   "files": [
     "dist",
