--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -30,6 +30,9 @@
     "openapi-typescript": "^7.3.0",
     "typescript": "^5.3.3"
   },
+  "peerDependencies": {
+    "commander": "^11.1.0"
+  },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
