--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -27,11 +27,13 @@
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
-    "commander": "^11.1.0",
     "micromatch": "^4.0.5",
     "openapi-typescript": "^7.3.0",
     "ora": "^8.0.1",
     "yaml": "^2.3.4"
+  },
+  "peerDependencies": {
+    "commander": "^11.1.0"
   },
   "devDependencies": {
     "@openapi-qraft/test-fixtures": "workspace:*",
