--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -92,7 +92,7 @@ jobs:
     steps:
       - name: check-spelling
         id: spelling
-        uses: check-spelling/check-spelling@v0.0.22
+        uses: check-spelling/check-spelling@v0.0.24
         with:
           suppress_push_for_open_pull_request: ${{ github.actor != 'dependabot[bot]' && 1 }}
           checkout: true
@@ -106,15 +106,20 @@ jobs:
           use_sarif: ${{ (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1 }}
           check_extra_dictionaries: ''
           extra_dictionary_limit: 20
+          dictionary_source_prefixes: >
+            {
+              "cspell": "https://raw.githubusercontent.com/streetsidesoftware/cspell-dicts/refs/heads/main/dictionaries/"
+            }
           extra_dictionaries:
             cspell:software-terms/dict/softwareTerms.txt
             cspell:npm/dict/npm.txt
-            cspell:filetypes/filetypes.txt
+            cspell:filetypes/src/filetypes.txt
             cspell:typescript/dict/typescript.txt
             cspell:node/dict/node.txt
             cspell:shell/dict/shell-all-words.txt
             cspell:html/dict/html.txt
             cspell:fullstack/dict/fullstack.txt
+            cspell:css/dict/css.txt
 
   comment-push:
     name: Report (Push)
@@ -126,7 +131,7 @@ jobs:
     if: (success() || failure()) && needs.spelling.outputs.followup && github.event_name == 'push'
     steps:
       - name: comment
-        uses: check-spelling/check-spelling@v0.0.22
+        uses: check-spelling/check-spelling@v0.0.24
         with:
           checkout: true
           spell_check_this: check-spelling/spell-check-this@prerelease
@@ -143,7 +148,7 @@ jobs:
     if: (success() || failure()) && needs.spelling.outputs.followup && contains(github.event_name, 'pull_request')
     steps:
       - name: comment
-        uses: check-spelling/check-spelling@v0.0.22
+        uses: check-spelling/check-spelling@v0.0.24
         with:
           checkout: true
           spell_check_this: check-spelling/spell-check-this@prerelease
@@ -167,7 +172,7 @@ jobs:
       cancel-in-progress: false
     steps:
       - name: apply spelling updates
-        uses: check-spelling/check-spelling@v0.0.22
+        uses: check-spelling/check-spelling@v0.0.24
         with:
           experimental_apply_changes_via_bot: 1
           checkout: true
