chore(tanstack-query-react-types): add legacy `UseSuspenseInfiniteQueryOptions` for the TanStack Query prior to 5.80.0

--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -21,6 +21,11 @@
       "import": "./dist/esm/shared/*.js",
       "require": "./dist/cjs/shared/*.cjs"
     },
+    "./legacy/*": {
+      "types": "./dist/types/legacy/*.d.ts",
+      "import": "./dist/esm/legacy/*.js",
+      "require": "./dist/cjs/legacy/*.cjs"
+    },
     "./package.json": "./package.json"
   },
   "typesVersions": {
