--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -36,6 +36,10 @@
   },
   "dependencies": {
     "@openapi-qraft/plugin": "workspace:^",
+    "ansi-colors": "^4.1.3",
+    "camelcase": "^8.0.0",
+    "commander": "^11.1.0",
+    "ora": "^8.1.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
@@ -48,17 +52,6 @@
     "memfs": "^4.11.1",
     "rimraf": "^5.0.10",
     "vitest": "^3.0.5"
-  },
-  "peerDependencies": {
-    "ansi-colors": "^4.1.3",
-    "camelcase": "^8.0.0",
-    "commander": "^11.1.0",
-    "ora": "^8.1.0"
-  },
-  "peerDependenciesMeta": {
-    "commander": {
-      "optional": false
-    }
   },
   "files": [
     "dist",
