--- a/packages/react-client/tsconfig.json
+++ b/packages/react-client/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "baseUrl": ".",
-    "lib": ["ES2019", "DOM", "DOM.Iterable", "ES2022.Error"],
+    "lib": ["ES2019", "DOM", "DOM.Iterable", "ES2022.Error", "ES2022.Array"],
     "jsx": "react",
     "verbatimModuleSyntax": true,
     "paths": {
