chore: add Query ESLint Plugin usage

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@openapi-qraft/cli": "workspace:*",
     "@openapi-qraft/eslint-config": "workspace:*",
+    "@openapi-qraft/eslint-plugin-query": "workspace:*",
     "@openapi-qraft/openapi-typescript-plugin": "workspace:^",
     "@openapi-qraft/rollup-config": "workspace:*",
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
