--- a/packages/eslint-plugin-query/package.json
+++ b/packages/eslint-plugin-query/package.json
@@ -55,9 +55,9 @@
     "@typescript-eslint/rule-tester": "^8.37.0",
     "@typescript-eslint/typescript-estree": "^8.39.1",
     "@vitest/coverage-v8": "^3.0.5",
-    "combinate": "^1.1.11",
     "eslint": "^9.24.0",
     "rimraf": "^5.0.10",
+    "rollup": "~4.22.4",
     "typescript": "^5.6.2",
     "vitest": "^3.0.5"
   },
