--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,6 +7,7 @@
       "@openapi-qraft/cli",
       "@openapi-qraft/plugin",
       "@openapi-qraft/tanstack-query-react-plugin",
+      "@openapi-qraft/openapi-typescript-plugin",
       "@openapi-qraft/react",
       "@openapi-qraft/tanstack-query-react-types",
       "@openapi-qraft/eslint-plugin-query"
