--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
     "@openapi-qraft/openapi-typescript-plugin": "workspace:*",
     "@openapi-qraft/plugin": "workspace:*",
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
+    "ansi-colors": "^4.1.3",
     "commander": "^14.0.2"
   },
   "devDependencies": {
