--- a/e2e/projects/typescript-nodenext-nodenext/tsconfig.json
+++ b/e2e/projects/typescript-nodenext-nodenext/tsconfig.json
@@ -9,6 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "declaration": true,
+    "declarationMap": true
   }
 }
