chore(dependabot): add configuration for npm updates excluding e2e projects

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,5 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
+    schedule:
+      interval: "weekly"
     exclude-paths:
       - "e2e/projects/**"
