--- a/packages/react-client/redocly.yaml
+++ b/packages/react-client/redocly.yaml
@@ -76,7 +76,7 @@ apis:
         createInternalReactAPIClient:
           services: none
           callbacks: ['setQueryData', 'getQueryData', 'getQueryKey', 'getInfiniteQueryKey']
-      use-parameters-wrapper:
+      operation-parameters-type:
         'get /files/**':
           type: 'ParametersWrapper'
           import: '../../type-overrides/parameters-wrapper.js'
