--- a/packages/react-client/redocly.yaml
+++ b/packages/react-client/redocly.yaml
@@ -75,7 +75,8 @@ apis:
           callbacks: all
         createInternalReactAPIClient:
           services: none
-          callbacks: ['setQueryData', 'getQueryData', 'getQueryKey', 'getInfiniteQueryKey']
+          context: InternalReactAPIClientContext
+          callbacks: ['useQuery', 'useMutation', 'setQueryData', 'getQueryData', 'getQueryKey', 'getInfiniteQueryKey']
       operation-parameters-type-wrapper:
         'get /files/**':
           type: 'ParametersWrapper'
