--- a/playground/package.json
+++ b/playground/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "codegen": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
+    "generate:mocks": "msw init && msw-auto-mock https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml -o src/mocks --max-array-length 10 --typescript --base-url 'https://petstore3.swagger.io/api/v3'",
     "e2e:pre-build": "npm run codegen",
     "e2e:post-build": "echo 'No post-build command'",
     "clean": "rimraf dist/"
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@faker-js/faker": "^10.2.0",
     "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.11.0",
@@ -32,9 +34,16 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "msw": "^2.12.7",
+    "msw-auto-mock": "^0.31.0",
     "rimraf": "^6.1.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.24.0",
     "vite": "^6.4.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
