--- a/playground/package.json
+++ b/playground/package.json
@@ -26,11 +26,13 @@
     "@faker-js/faker": "^10.2.0",
     "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^10.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
