--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
+      - name: Generate Mocks
+        run: yarn workspace playground run generate:mocks
+
       - name: Build
         run: yarn build
 
