feat: add asyncapi generator POC

--- a/packages/asyncapi-typescript-plugin/tsconfig.build.json
+++ b/packages/asyncapi-typescript-plugin/tsconfig.build.json
@@ -6,5 +6,10 @@
     "declarationMap": true,
     "resolveJsonModule": false
   },
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**", "src/__snapshots__/**/*"]
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+    "src/tmp/**",
+    "src/__snapshots__/**/*"
+  ]
 }
