--- a/packages/asyncapi-typescript-plugin/package.json
+++ b/packages/asyncapi-typescript-plugin/package.json
@@ -34,6 +34,7 @@
     }
   },
   "dependencies": {
+    "@asyncapi/parser": "^3.4.0",
     "@openapi-qraft/plugin": "workspace:^",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
