refactor: rename `packages/plugin` to `packages/openapi-plugin`

--- a/packages/openapi-plugin/package.json
+++ b/packages/openapi-plugin/package.json
@@ -68,6 +68,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
-    "directory": "packages/plugin"
+    "directory": "packages/openapi-plugin"
   }
 }
