feat: rename cli to openapi-cli

--- a/packages/openapi-cli/package.json
+++ b/packages/openapi-cli/package.json
@@ -56,7 +56,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
-    "directory": "packages/cli"
+    "directory": "packages/openapi-cli"
   },
   "bugs": {
     "url": "https://github.com/OpenAPI-Qraft/openapi-qraft/issues"
