refactor(openapi-plugin): extend base QraftCommand from @qraft/plugin
- QraftCommand now extends QraftCommandBase from @qraft/plugin
- Update imports in openapi-typescript-plugin and tanstack-query-react-plugin
- Add @qraft/plugin dependencies where needed

--- a/packages/openapi-plugin/package.json
+++ b/packages/openapi-plugin/package.json
@@ -33,6 +33,7 @@
     }
   },
   "dependencies": {
+    "@qraft/plugin": "workspace:*",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
