--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@openapi-qraft/plugin": "workspace:^",
+    "@qraft/plugin": "workspace:^",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2",
