--- a/packages/asyncapi-typescript-plugin/package.json
+++ b/packages/asyncapi-typescript-plugin/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@asyncapi/parser": "^3.4.0",
-    "@openapi-qraft/plugin": "workspace:^",
+    "@qraft/plugin": "workspace:^",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2",
