--- a/packages/asyncapi-plugin/package.json
+++ b/packages/asyncapi-plugin/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@qraft/asyncapi-typescript-plugin",
+  "name": "@qraft/asyncapi-plugin",
   "version": "1.0.0",
+  "packageManager": "yarn@4.0.2",
   "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "yarn build --watch --noEmitOnError false",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
-    "clean": "rimraf dist/"
-  },
-  "publishConfig": {
-    "access": "public"
+    "clean": "rimraf dist/",
+    "write-package-version-file": "yarn exec ../../write-package-version-file.sh"
   },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,21 +33,25 @@
     }
   },
   "dependencies": {
-    "@asyncapi/parser": "^3.4.0",
-    "@qraft/asyncapi-plugin": "workspace:^",
+    "@qraft/plugin": "workspace:*",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
+    "camelcase": "^8.0.0",
     "commander": "^14.0.2",
+    "micromatch": "^4.0.8",
     "openapi-typescript": "^7.10.1",
-    "typescript": "^5.6.2"
+    "ora": "^8.2.0"
   },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^20.16.5",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.39.1",
     "memfs": "^4.11.1",
     "rimraf": "^6.1.2",
+    "typescript": "^5.6.2",
     "vitest": "^3.2.4"
   },
   "files": [
@@ -56,14 +59,16 @@
     "src",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*",
-    "!src/**/*.test.*",
     "!src/**/__snapshots__/**",
+    "!src/**/*.test.*",
     "!src/**/*.spec.*"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
-    "directory": "packages/asyncapi-typescript-plugin"
-  },
-  "packageManager": "yarn@4.9.1"
+    "directory": "packages/asyncapi-plugin"
+  }
 }
