feat(cli): implement @qraft/cli with openapi/asyncapi subcommands
Add main CLI entry point with Commander subcommands for openapi and asyncapi.
Each subcommand dynamically imports the corresponding QraftCommand and plugins.
- openapi: defaults to tanstack-query-react plugin
- asyncapi: requires explicit plugin specification

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@qraft/cli",
   "version": "1.0.0",
-  "description": "todo::add description and check others",
+  "description": "CLI tool for generating type-safe code from OpenAPI and AsyncAPI specifications",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "yarn build --watch --noEmitOnError false",
@@ -39,6 +39,7 @@
     }
   },
   "dependencies": {
+    "@qraft/cli-utils": "workspace:*",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2"
   },
