--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,8 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
-    "clean": "rimraf dist/"
+    "clean": "rimraf dist/",
+    "write-package-version-file": "yarn exec ../../write-package-version-file.sh"
   },
   "type": "module",
   "bin": {
