--- a/packages/asyncapi-typescript-plugin/package.json
+++ b/packages/asyncapi-typescript-plugin/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "@asyncapi/parser": "^3.4.0",
     "@qraft/asyncapi-plugin": "workspace:^",
+    "@qraft/cli-utils": "workspace:*",
+    "@qraft/plugin": "workspace:^",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2",
