--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@openapi-qraft/plugin": "workspace:^",
+    "@qraft/cli-utils": "workspace:*",
     "@qraft/plugin": "workspace:^",
     "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
