--- a/packages/asyncapi-plugin/package.json
+++ b/packages/asyncapi-plugin/package.json
@@ -32,6 +32,7 @@
     }
   },
   "dependencies": {
+    "@asyncapi/parser": "^3.4.0",
     "@qraft/plugin": "workspace:*",
     "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
