--- a/packages/asyncapi-plugin/package.json
+++ b/packages/asyncapi-plugin/package.json
@@ -34,25 +34,17 @@
   "dependencies": {
     "@asyncapi/parser": "^3.4.0",
     "@qraft/plugin": "workspace:*",
-    "@redocly/openapi-core": "^1.34.5",
     "ansi-colors": "^4.1.3",
-    "camelcase": "^8.0.0",
     "commander": "^14.0.2",
-    "micromatch": "^4.0.8",
-    "openapi-typescript": "^7.10.1",
     "ora": "^8.2.0"
   },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
-    "@openapi-qraft/test-fixtures": "workspace:*",
-    "@types/micromatch": "^4.0.9",
     "@types/node": "^20.16.5",
-    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.39.1",
     "memfs": "^4.11.1",
     "rimraf": "^6.1.2",
-    "typescript": "^5.6.2",
-    "vitest": "^3.2.4"
+    "typescript": "^5.6.2"
   },
   "files": [
     "dist",
