feat(cli): refactor Redocly config handling for OpenAPI and AsyncAPI commands

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,8 +20,7 @@
     "@openapi-qraft/plugin": "workspace:*",
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
     "@qraft/asyncapi-plugin": "workspace:*",
-    "@qraft/asyncapi-typescript-plugin": "workspace:*",
-    "@qraft/plugin": "workspace:*"
+    "@qraft/asyncapi-typescript-plugin": "workspace:*"
   },
   "peerDependenciesMeta": {
     "@openapi-qraft/openapi-typescript-plugin": {
@@ -38,13 +37,11 @@
     },
     "@qraft/asyncapi-typescript-plugin": {
       "optional": true
-    },
-    "@qraft/plugin": {
-      "optional": true
     }
   },
   "dependencies": {
     "@qraft/cli-utils": "workspace:*",
+    "@qraft/plugin": "workspace:*",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2"
   },
@@ -55,7 +52,6 @@
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
     "@qraft/asyncapi-plugin": "workspace:*",
     "@qraft/asyncapi-typescript-plugin": "workspace:*",
-    "@qraft/plugin": "workspace:*",
     "@types/node": "^20.16.5",
     "eslint": "^9.39.1",
     "rimraf": "^6.1.2",
