feat(cli): add redocly command support

--- a/e2e/projects/typescript-es2015-bundler-qraft-cli/redocly.yaml
+++ b/e2e/projects/typescript-es2015-bundler-qraft-cli/redocly.yaml
@@ -12,5 +12,6 @@ apis:
     x-asyncapi-qraft:
       plugin:
         asyncapi-typescript: true
+      asyncapi-types-file-name: asyncapi.ts
       output-dir: src/asyncapi-redocly
       clean: true
